<resources>
    <string name="app_name">Malko</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_drinks">Search drinks</string>
    <string name="search">Search</string>
    <string name="product">Product</string>
    <string name="location">Location</string>
    <string name="login">Login</string>


    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="collapse_view">collapse view</string>
    <string name="expand_view">expand view</string>
    <string name="offers_in_turku">Offers in Turku</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="birthday">Birthday</string>
    <string name="create_new_account">Create New Account</string>
    <string name="laheta">Submit</string>
    <string name="phone_snapchat_etc">Phone, Snapchat etc.</string>
    <string name="drink_name_eg_corona">Drink name eg. Corona</string>
    <string name="credits">By Chadtec</string>
    <string name="product_name">Product Name</string>
    <string name="example_amount">9999 kpl</string>
    <string name="no_result">No result</string>

    <string-array name="kategoriat" >
        <item>Olut</item>
        <item>Siideri</item>
        <item>Lonkero</item>
        <item>Valkoviini</item>
        <item>Punaviini</item>
        <item>Kuohuviini</item>
        <item>Likööri</item>
        <item>Viski</item>
        <item>Rommi</item>
        <item>Viina</item>
        <item>Muu</item>
    </string-array>

    <string-array name="kaupunginosat" >
        <item>Keskusta</item>
        <item>Iso-Heikkilä</item>
        <item>Pahaniemi</item>
        <item>Pitkämäki</item>
        <item>Raunistula</item>
        <item>Länsinummi</item>
        <item>Runosmäki</item>
        <item>Räntämäki</item>
        <item>Moisio</item>
        <item>Yliopisto</item>
        <item>Itäharju</item>
        <item>Ylioppilaskylä</item>
        <item>Nummenmäki</item>
        <item>Halinen</item>
        <item>Pääskyvuori</item>
        <item>Kurjenmäki</item>
        <item>Vasaramäki</item>
        <item>Lauste</item>
        <item>Piispanristi</item>
        <item>Vähäheikkilä</item>
        <item>Hirvensalo</item>
        <item>Kakskerta</item>
    </string-array>
    <string-array name="amount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="amount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

</resources>