<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constrainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="48dp"
        android:paddingTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/white_border"
            android:text="@string/login"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/or_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:maxLength="64"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:maxLength="16"
            app:layout_constraintBottom_toTopOf="@+id/login_password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/login_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/username"
            android:labelFor="@+id/login_email"
            app:layout_constraintBottom_toTopOf="@+id/login_email"
            app:layout_constraintStart_toStartOf="@+id/login_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/login_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/login_password"
            android:layout_marginStart="4dp"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            app:layout_constraintStart_toStartOf="@+id/login_password" />


        <Button
            android:id="@+id/login_takeToSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#00FFFFFF"
            android:text="@string/create_new_account"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/or_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:text="@string/or"
            app:layout_constraintBottom_toTopOf="@+id/login_takeToSignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/atomic_age"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/login_constrainlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_constrainlayout" />


</androidx.constraintlayout.widget.ConstraintLayout>